add new metrics

--- a/Bag_of_words.ipynb
+++ b/Bag_of_words.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
     "import ast\n",
     "import re\n",
     "import warnings\n",
-    "from meter import *\n",
+    "from meter import score\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "(3489, 20)"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -172,7 +172,7 @@
        "       [ 0.,  0.,  0., ...,  0.,  1.,  0.]])"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the model from disk\n",
+    "filename = 'nb_bag.pkl'\n",
+    "loaded_nb = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "naive_train_pred = loaded_nb.predict(bag_X_train)\n",
+    "naive_test_pred = loaded_nb.predict(bag_X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +281,9 @@
       "Naive Bayes Avg Accuracy on train : 0.9792777300085984\n",
       "Naive Bayes Exact Accuracy on train : 0.7179707652622528\n",
       "Naive Bayes Precision on train : 0.9315267823056468\n",
-      "Naive Bayes Recall on train : 0.9288957083925142\n"
+      "Naive Bayes Recall on train : 0.9288957083925142\n",
+      "Naive Bayes Hit Rate on train : 0.996847234164517\n",
+      "Naive Bayes F1 Score on train : 0.9302093848711593\n"
      ]
     }
    ],
@@ -269,12 +292,14 @@
     "print('Naive Bayes Avg Accuracy on train : {}'.format(score(y_train, naive_train_pred, 'avg')))\n",
     "print('Naive Bayes Exact Accuracy on train : {}'.format(score(y_train, naive_train_pred, 'exact')))\n",
     "print('Naive Bayes Precision on train : {}'.format(score(y_train, naive_train_pred, 'precision')))\n",
-    "print('Naive Bayes Recall on train : {}'.format(score(y_train, naive_train_pred, 'recall')))"
+    "print('Naive Bayes Recall on train : {}'.format(score(y_train, naive_train_pred, 'recall')))\n",
+    "print('Naive Bayes Hit Rate on train : {}'.format(score(y_train, naive_train_pred, 'hit')))\n",
+    "print('Naive Bayes F1 Score on train : {}'.format(score(y_train, naive_train_pred, 'f1')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +309,9 @@
       "Naive Bayes Avg Accuracy on test : 0.8965063001145475\n",
       "Naive Bayes Exact Accuracy on test : 0.13058419243986255\n",
       "Naive Bayes Precision on test : 0.7681719171017082\n",
-      "Naive Bayes Recall on test : 0.4236525949790833\n"
+      "Naive Bayes Recall on test : 0.4236525949790833\n",
+      "Naive Bayes Hit Rate on test : 0.9083619702176403\n",
+      "Naive Bayes F1 Score on test : 0.5461173566601978\n"
      ]
     }
    ],
@@ -293,7 +320,9 @@
     "print('Naive Bayes Avg Accuracy on test : {}'.format(score(y_test, naive_test_pred, 'avg')))\n",
     "print('Naive Bayes Exact Accuracy on test : {}'.format(score(y_test, naive_test_pred, 'exact')))\n",
     "print('Naive Bayes Precision on test : {}'.format(score(y_test, naive_test_pred, 'precision')))\n",
-    "print('Naive Bayes Recall on test : {}'.format(score(y_test, naive_test_pred, 'recall')))"
+    "print('Naive Bayes Recall on test : {}'.format(score(y_test, naive_test_pred, 'recall')))\n",
+    "print('Naive Bayes Hit Rate on test : {}'.format(score(y_test, naive_test_pred, 'hit')))\n",
+    "print('Naive Bayes F1 Score on test : {}'.format(score(y_test, naive_test_pred, 'f1')))"
    ]
   },
   {
@@ -303,7 +332,6 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "filename = 'nb_bag.pkl'\n",
     "pickle.dump(nb, open(filename, 'wb'))"
    ]
   },
@@ -359,7 +387,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the model from disk\n",
+    "filename = 'rf_bag.pkl'\n",
+    "loaded_rf = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_train_pred = loaded_rf.predict(bag_X_train)\n",
+    "rf_test_pred = loaded_rf.predict(bag_X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +418,9 @@
       "Random Forest Avg Accuracy on train : 0.9999570077386072\n",
       "Random Forest Exact Accuracy on train : 0.999140154772141\n",
       "Random Forest Precision on train : 1.0\n",
-      "Random Forest Recall on train : 0.9993218893368867\n"
+      "Random Forest Recall on train : 0.9993218893368867\n",
+      "Random Forest Hit Rate on train : 1.0\n",
+      "Random Forest F1 Score on train : 0.999660829670935\n"
      ]
     }
    ],
@@ -378,12 +429,14 @@
     "print('Random Forest Avg Accuracy on train : {}'.format(score(y_train, rf_train_pred, 'avg')))\n",
     "print('Random Forest Exact Accuracy on train : {}'.format(score(y_train, rf_train_pred, 'exact')))\n",
     "print('Random Forest Precision on train : {}'.format(score(y_train, rf_train_pred, 'precision')))\n",
-    "print('Random Forest Recall on train : {}'.format(score(y_train, rf_train_pred, 'recall')))"
+    "print('Random Forest Recall on train : {}'.format(score(y_train, rf_train_pred, 'recall')))\n",
+    "print('Random Forest Hit Rate on train : {}'.format(score(y_train, rf_train_pred, 'hit')))\n",
+    "print('Random Forest F1 Score on train : {}'.format(score(y_train, rf_train_pred, 'f1')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +446,9 @@
       "Random Forest Avg Accuracy on test : 0.8701603665521191\n",
       "Random Forest Exact Accuracy on test : 0.05154639175257732\n",
       "Random Forest Precision on test : 0.672163815507625\n",
-      "Random Forest Recall on test : 0.1545947643964105\n"
+      "Random Forest Recall on test : 0.1545947643964105\n",
+      "Random Forest Hit Rate on test : 0.6838487972508591\n",
+      "Random Forest F1 Score on test : 0.25137448638574794\n"
      ]
     }
    ],
@@ -402,7 +457,9 @@
     "print('Random Forest Avg Accuracy on test : {}'.format(score(y_test, rf_test_pred, 'avg')))\n",
     "print('Random Forest Exact Accuracy on test : {}'.format(score(y_test, rf_test_pred, 'exact')))\n",
     "print('Random Forest Precision on test : {}'.format(score(y_test, rf_test_pred, 'precision')))\n",
-    "print('Random Forest Recall on test : {}'.format(score(y_test, rf_test_pred, 'recall')))"
+    "print('Random Forest Recall on test : {}'.format(score(y_test, rf_test_pred, 'recall')))\n",
+    "print('Random Forest Hit Rate on test : {}'.format(score(y_test, rf_test_pred, 'hit')))\n",
+    "print('Random Forest F1 Score on test : {}'.format(score(y_test, rf_test_pred, 'f1')))"
    ]
   },
   {
@@ -412,7 +469,6 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "filename = 'rf_bag.pkl'\n",
     "pickle.dump(rf, open(filename, 'wb'))"
    ]
   },
@@ -448,6 +504,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the model from disk\n",
+    "filename = 'svm_bag.pkl'\n",
+    "loaded_svm = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_train_pred = loaded_svm.predict(bag_X_train)\n",
+    "svm_test_pred = loaded_svm.predict(bag_X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 364,
    "metadata": {},
    "outputs": [
@@ -468,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +555,9 @@
       "SVM Avg Accuracy on train : 1.0\n",
       "SVM Exact Accuracy on train : 1.0\n",
       "SVM Precision on train : 1.0\n",
-      "SVM Recall on train : 1.0\n"
+      "SVM Recall on train : 1.0\n",
+      "SVM Hit Rate on train : 1.0\n",
+      "SVM F1 Score on train : 1.0\n"
      ]
     }
    ],
@@ -487,12 +566,14 @@
     "print('SVM Avg Accuracy on train : {}'.format(score(y_train, svm_train_pred, 'avg')))\n",
     "print('SVM Exact Accuracy on train : {}'.format(score(y_train, svm_train_pred, 'exact')))\n",
     "print('SVM Precision on train : {}'.format(score(y_train, svm_train_pred, 'precision')))\n",
-    "print('SVM Recall on train : {}'.format(score(y_train, svm_train_pred, 'recall')))"
+    "print('SVM Recall on train : {}'.format(score(y_train, svm_train_pred, 'recall')))\n",
+    "print('SVM Hit Rate on train : {}'.format(score(y_train, svm_train_pred, 'hit')))\n",
+    "print('SVM F1 Score on train : {}'.format(score(y_train, svm_train_pred, 'f1')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +583,9 @@
       "SVM Avg Accuracy on test : 0.8882016036655211\n",
       "SVM Exact Accuracy on test : 0.09392898052691867\n",
       "SVM Precision on test : 0.6848130894195936\n",
-      "SVM Recall on test : 0.49363130857564047\n"
+      "SVM Recall on test : 0.49363130857564047\n",
+      "SVM Hit Rate on test : 0.9209621993127147\n",
+      "SVM F1 Score on test : 0.5737142660867198\n"
      ]
     }
    ],
@@ -511,7 +594,9 @@
     "print('SVM Avg Accuracy on test : {}'.format(score(y_test, svm_test_pred, 'avg')))\n",
     "print('SVM Exact Accuracy on test : {}'.format(score(y_test, svm_test_pred, 'exact')))\n",
     "print('SVM Precision on test : {}'.format(score(y_test, svm_test_pred, 'precision')))\n",
-    "print('SVM Recall on test : {}'.format(score(y_test, svm_test_pred, 'recall')))"
+    "print('SVM Recall on test : {}'.format(score(y_test, svm_test_pred, 'recall')))\n",
+    "print('SVM Hit Rate on test : {}'.format(score(y_test, svm_test_pred, 'hit')))\n",
+    "print('SVM F1 Score on test : {}'.format(score(y_test, svm_test_pred, 'f1')))"
    ]
   },
   {
@@ -521,7 +606,6 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "filename = 'svm_bag.pkl'\n",
     "pickle.dump(svm, open(filename, 'wb'))"
    ]
   },
@@ -546,7 +630,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the model from disk\n",
+    "filename = 'lr_bag.pkl'\n",
+    "loaded_lr = pickle.load(open(filename, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_train_pred = loaded_lr.predict(bag_X_train)\n",
+    "lr_test_pred = loaded_lr.predict(bag_X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +661,9 @@
       "Logistic Regression Avg Accuracy on train : 0.9929492691315562\n",
       "Logistic Regression Exact Accuracy on train : 0.8747492118085411\n",
       "Logistic Regression Precision on train : 0.9950027359503879\n",
-      "Logistic Regression Recall on train : 0.9822574263121329\n"
+      "Logistic Regression Recall on train : 0.9822574263121329\n",
+      "Logistic Regression Recall on train : 0.9988535396961881\n",
+      "Logistic Regression Recall on train : 0.9885890033507853\n"
      ]
     }
    ],
@@ -565,12 +672,14 @@
     "print('Logistic Regression Avg Accuracy on train : {}'.format(score(y_train, lr_train_pred, 'avg')))\n",
     "print('Logistic Regression Exact Accuracy on train : {}'.format(score(y_train, lr_train_pred, 'exact')))\n",
     "print('Logistic Regression Precision on train : {}'.format(score(y_train, lr_train_pred, 'precision')))\n",
-    "print('Logistic Regression Recall on train : {}'.format(score(y_train, lr_train_pred, 'recall')))"
+    "print('Logistic Regression Recall on train : {}'.format(score(y_train, lr_train_pred, 'recall')))\n",
+    "print('Logistic Regression Hit Rate on train : {}'.format(score(y_train, lr_train_pred, 'hit')))\n",
+    "print('Logistic Regression F1 score on train : {}'.format(score(y_train, lr_train_pred, 'f1')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +689,9 @@
       "Logistic Regression Avg Accuracy on test : 0.8963917525773195\n",
       "Logistic Regression Exact Accuracy on test : 0.11798396334478808\n",
       "Logistic Regression Precision on test : 0.7402333343216527\n",
-      "Logistic Regression Recall on test : 0.46579822650702135\n"
+      "Logistic Regression Recall on test : 0.46579822650702135\n",
+      "Logistic Regression Recall on test : 0.9106529209621993\n",
+      "Logistic Regression Recall on test : 0.5717916272298719\n"
      ]
     }
    ],
@@ -589,7 +700,9 @@
     "print('Logistic Regression Avg Accuracy on test : {}'.format(score(y_test, lr_test_pred, 'avg')))\n",
     "print('Logistic Regression Exact Accuracy on test : {}'.format(score(y_test, lr_test_pred, 'exact')))\n",
     "print('Logistic Regression Precision on test : {}'.format(score(y_test, lr_test_pred, 'precision')))\n",
-    "print('Logistic Regression Recall on test : {}'.format(score(y_test, lr_test_pred, 'recall')))"
+    "print('Logistic Regression Recall on test : {}'.format(score(y_test, lr_test_pred, 'recall')))\n",
+    "print('Logistic Regression Hit Rate on test : {}'.format(score(y_test, lr_test_pred, 'hit')))\n",
+    "print('Logistic Regression F1 on test : {}'.format(score(y_test, lr_test_pred, 'f1')))"
    ]
   },
   {
@@ -599,7 +712,6 @@
    "outputs": [],
    "source": [
     "# save model\n",
-    "filename = 'lr_bag.pkl'\n",
     "pickle.dump(lr, open(filename, 'wb'))"
    ]
   },
