--- a/Bag_of_words.ipynb
+++ b/Bag_of_words.ipynb
@@ -4,8 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Science Final Project: Bag-of-Words Representation\n",
+    "# Data Science Final Project: bag-of-words Representation\n",
     "## Group Members: Jiacheng Shi, Boyuan Sun, Xiangru"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Notebook introduction**\n",
+    "\n",
+    "\n",
+    "In this notebook we train classifiers and neural network by bag-of-words. We experimented several neural networks and evaluate their results. The performance of our models trained only on textual data is evaluated against the nueral network trained on posters and texts with bag of words."
    ]
   },
   {
@@ -18,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
