--- a/Bag_of_words.ipynb
+++ b/Bag_of_words.ipynb
@@ -27,11 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/lib/python3.5/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n",
+      "//anaconda/lib/python3.5/importlib/_bootstrap.py:222: RuntimeWarning: compiletime version 3.6 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.5\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -127,6 +137,111 @@
     "# reshape y_train and y_test\n",
     "y_train = np.array(list(y_train))\n",
     "y_test = np.array(list(y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genre_dict['drama']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "baseline_pred = np.zeros_like(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Avg Accuracy on test : 0.8375715922107675\n",
+      "Baseline Exact Accuracy on test : 0.0\n",
+      "Baseline Precision on test : 0.0\n",
+      "Baseline Recall on test : 0.0\n",
+      "Baseline Hit Rate on test : 0.0\n",
+      "Baseline F1 Score on test : nan\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluation\n",
+    "print('Baseline Avg Accuracy on test : {}'.format(score(y_test, baseline_pred, 'avg')))\n",
+    "print('Baseline Exact Accuracy on test : {}'.format(score(y_test, baseline_pred, 'exact')))\n",
+    "print('Baseline Precision on test : {}'.format(score(y_test, baseline_pred, 'precision')))\n",
+    "print('Baseline Recall on test : {}'.format(score(y_test, baseline_pred, 'recall')))\n",
+    "print('Baseline Hit Rate on test : {}'.format(score(y_test, baseline_pred, 'hit')))\n",
+    "print('Baseline F1 Score on test : {}'.format(score(y_test, baseline_pred, 'f1')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "baseline_pred[:, genre_dict['drama']] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Baseline Avg Accuracy on test : 0.8403780068728522\n",
+      "Baseline Exact Accuracy on test : 0.026345933562428408\n",
+      "Baseline Precision on test : 0.026403207331042382\n",
+      "Baseline Recall on test : 0.05\n",
+      "Baseline Hit Rate on test : 0.5280641466208477\n",
+      "Baseline F1 Score on test : 0.034557721139430286\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluation\n",
+    "print('Baseline Avg Accuracy on test : {}'.format(score(y_test, baseline_pred, 'avg')))\n",
+    "print('Baseline Exact Accuracy on test : {}'.format(score(y_test, baseline_pred, 'exact')))\n",
+    "print('Baseline Precision on test : {}'.format(score(y_test, baseline_pred, 'precision')))\n",
+    "print('Baseline Recall on test : {}'.format(score(y_test, baseline_pred, 'recall')))\n",
+    "print('Baseline Hit Rate on test : {}'.format(score(y_test, baseline_pred, 'hit')))\n",
+    "print('Baseline F1 Score on test : {}'.format(score(y_test, baseline_pred, 'f1')))"
    ]
   },
   {
@@ -1404,7 +1519,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -1418,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
